--- a/HTML/Yugioh/Carta.html
+++ b/HTML/Yugioh/Carta.html
@@ -12,6 +12,10 @@
             margin: 0;
         }
 
+        p {
+            text-align: justify;
+        }
+
         .Profile {
             padding: 5px;
         }
@@ -83,7 +87,124 @@
         .profile_monster_ritual {
             background-image: url("fundo_ritual.jpg");
             background-repeat: repeat;
-            background-position: right top;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_normal_spell {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_spell_continuous {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_spell_equip {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_spell_field {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_spell_quick {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_spell_ritual {
+            background-image: url("fundo_spell.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_normal_trap {
+            background-image: url("fundo_trap.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_counter_trap {
+            background-image: url("fundo_trap.jpg");
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            width: 280px;
+            height: auto;
+            padding: 5px;
+            overflow: hidden;
+            border: 5px solid #363636;
+            border-radius: 5px;
+        }
+
+        .profile_continuous_trap {
+            background-image: url("fundo_trap.jpg");
+            background-repeat: repeat;
+            background-position: center;
             background-attachment: fixed;
             width: 280px;
             height: auto;
@@ -162,6 +283,10 @@
         .profile_level_xyz img {
             float: left;
             padding: 0px;
+        }
+
+        .profile_spell {
+            float: right;
         }
 
         .profile-img {
@@ -381,7 +506,7 @@
             <script>
                 const imageSincro = document.getElementById('image-container-sincro');
                 const URLsincro = 'Level.jpg';
-                const Countsincro = 3; // Número de vezes que a imagem será repetida
+                const Countsincro = 10; // Número de vezes que a imagem será repetida
 
                 for (let i = 0; i < Countsincro; i++) {
                     const imagesincro = document.createElement('img');
@@ -513,6 +638,318 @@
                 </div>
                 <div class="profile_attack"></div>
                 <p style="float:right;padding:3px">ATK 8000/ DEF 10000</p>
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="Profile">
+        <div class="profile_normal_spell">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">[SPELL CARD]</h4>
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="Profile">
+        <div class="profile_spell_continuous">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Continuous.jpg" width=" 20px">
+                <h4 class="profile_spell">[SPELL CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="Profile">
+        <div class="profile_spell_equip">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Equip.jpg" width=" 20px">
+                <h4 class="profile_spell">[SPELL CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="Profile">
+        <div class="profile_spell_field">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Field.jpg" width=" 20px">
+                <h4 class="profile_spell">[SPELL CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="Profile">
+        <div class="profile_spell_quick">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Quick.jpg" width=" 20px">
+                <h4 class="profile_spell">[SPELL CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="Profile">
+        <div class="profile_spell_ritual">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">SPELL CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Ritual.jpg" width=" 20px">
+                <h4 class="profile_spell">[SPELL CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="Profile">
+        <div class="profile_continuous_trap">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">TRAP CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Continuous.jpg" width=" 20px">
+                <h4 class="profile_spell">[TRAP CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="Profile">
+        <div class="profile_counter_trap">
+            <div class="profile-name">
+                <div class="profile_name">
+                    <div class="profile_left">
+                        <p class="pname">TRAP CARD</p>
+                    </div>
+                    <div class="profile_right">
+                        <img src="SPELL.jpg" width=" 25px">
+                    </div>
+                </div>
+            </div>
+            <div class="profile_level">
+                <h4 class="profile_spell">]</h4>
+                <img src="Counter.jpg" width=" 20px">
+                <h4 class="profile_spell">[TRAP CARD</h4>
+
+            </div>
+
+            <div class="profile_img">
+                <div class="profile-img">
+                    <img src="yubel.jpg" width="100%">
+                </div>
+            </div>
+            <div class="profile_desc">
+                <div class="profile-desc">
+                    <p>Este card não pode ser destruído em batalha. Você não sofre dano de batalha de batalhas
+                        envolvendo este card. Antes do cálculo de dano, quando este card com a face para cima em Posição
+                        de Ataque for atacado por um monstro do oponente: cause dano ao seu oponente igual ao ATK desse
+                        monstro. Durante a sua Fase Final: ofereça como Tributo 1 outro monstro ou destrua este card.
+                        Quando este card for destruído, exceto pelo seu próprio efeito: o seu dono pode Invocar por
+                        Invocação-Especial 1 "Yubel - Encarnação do Terror" da sua mão, Deck ou Cemitério.</p>
+                </div>
+
             </div>
         </div>
     </div>
